Move `pure` and `static` specifier clash detection to parsing